--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2024"
 smol_str = "0.3.2"
 qraft_derive = { path = "./qraft_derive", version = "0.1.0" }
 tracing = "0.1.41"
+sqlx = { version = "0.8.6", optional = true }
 
 [profile.dev.build-override]
 opt-level = 3
+
+[features]
+default = ["sqlx"]
+sqlx = ["dep:sqlx"]
