--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,22 @@ edition = "2024"
 smol_str = "0.3.2"
 qraft_derive = { path = "./qraft_derive", version = "0.1.0" }
 tracing = "0.1.41"
-sqlx = { version = "0.8.6", optional = true }
+sqlx = { version = "0.8.6", optional = true, default-feature = false }
+time = { version = "0.3.41", optional = true }
+chrono = { version = "0.4.41", optional = true }
+uuid = { version = "1.17.0", optional = true }
+serde_json = { version = "1.0.140", optional = true }
 
 [profile.dev.build-override]
 opt-level = 3
 
 [features]
-default = ["sqlx"]
-sqlx = ["dep:sqlx"]
+default = []
+mysql = ["dep:sqlx", "sqlx/mysql"]
+postgres = ["dep:sqlx", "sqlx/postgres"]
+sqlite = ["dep:sqlx", "sqlx/sqlite"]
+
+time = ["dep:time", "sqlx/time"]
+chrono = ["dep:chrono", "sqlx/chrono"]
+uuid = ["dep:uuid", "sqlx/uuid"]
+json = ["dep:serde_json", "sqlx/json"]
