--- a/qraft_derive/Cargo.toml
+++ b/qraft_derive/Cargo.toml
@@ -10,4 +10,5 @@ proc-macro = true
 heck = "0.5.0"
 proc-macro2 = "1.0.95"
 quote = "1.0.40"
-syn = { version = "2.0.101", features = ["extra-traits", "fold", "full", "test", "visit", "visit-mut"] }
+syn = { version = "2.0.101", features = ["full"] }
+darling = "0.20.11"
