chore: prepare release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "A Rust library for building SQL queries with a fluent API."
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/qraft-rs/qraft"
 homepage = "https://github.com/qraft-rs/qraft"
-readme = "README.md"
+readme = "readme.md"
 keywords = ["sql", "query", "builder", "fluent", "async"]
 categories = ["database", "sql"]
 publish = ["crates-io"]
