--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ time = { version = "0.3.41", optional = true }
 chrono = { version = "0.4.41", optional = true }
 uuid = { version = "1.17.0", optional = true }
 serde_json = { version = "1.0.140", optional = true }
+indexmap = "2.9.0"
 
 [profile.dev.build-override]
 opt-level = 3
