docs: change the repository link

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2024"
 authors = ["Dany Gagnon dany@ovior.ca"]
 description = "A Rust library for building SQL queries with a fluent API."
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/qraft-rs/qraft"
-homepage = "https://github.com/qraft-rs/qraft"
+repository = "https://github.com/oviorbit/qraft"
+homepage = "https://github.com/oviorbit/qraft"
 readme = "readme.md"
 keywords = ["sql", "query", "builder", "fluent", "async"]
 categories = ["database"]
