chore: prepare release for orm

--- a/qorm/Cargo.toml
+++ b/qorm/Cargo.toml
@@ -13,4 +13,4 @@ categories = ["database"]
 publish = ["crates-io"]
 
 [dependencies]
-qraft = { version = "*", path = "..", feature = ["sqlite", "postgres", "mysql"] }
+qraft = { version = "*", path = ".." }
