--- a/qorm/Cargo.toml
+++ b/qorm/Cargo.toml
@@ -13,4 +13,4 @@ categories = ["database"]
 publish = ["crates-io"]
 
 [dependencies]
-qraft = { version = "*", path = ".." }
+qraft = { version = "0.3.1", path = ".." }
