--- a/qorm/Cargo.toml
+++ b/qorm/Cargo.toml
@@ -13,4 +13,4 @@ categories = ["database"]
 publish = ["crates-io"]
 
 [dependencies]
-qraft = { path = "..", feature = ["sqlite", "postgres", "mysql"] }
+qraft = { path = "..", version = "*" feature = ["sqlite", "postgres", "mysql"] }
