feat: add more code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,17 +22,19 @@ chrono = { version = "0.4.41", optional = true }
 uuid = { version = "1.17.0", optional = true }
 serde_json = { version = "1.0.140", optional = true }
 indexmap = "2.9.0"
+secrecy = { version = "0.10.3", optional = true }
 
 [profile.dev.build-override]
 opt-level = 3
 
 [features]
 default = []
-mysql = ["dep:sqlx", "sqlx/mysql"]
-postgres = ["dep:sqlx", "sqlx/postgres"]
-sqlite = ["dep:sqlx", "sqlx/sqlite"]
+mysql = ["dep:sqlx", "sqlx/runtime-tokio", "sqlx/mysql"]
+postgres = ["dep:sqlx","sqlx/runtime-tokio", "sqlx/postgres"]
+sqlite = ["dep:sqlx","sqlx/runtime-tokio", "sqlx/sqlite"]
 
 time = ["dep:time", "sqlx/time"]
 chrono = ["dep:chrono", "sqlx/chrono"]
 uuid = ["dep:uuid", "sqlx/uuid"]
 json = ["dep:serde_json", "sqlx/json"]
+secrecy = ["dep:secrecy"]
