--- a/qorm/Cargo.toml
+++ b/qorm/Cargo.toml
@@ -13,5 +13,12 @@ categories = ["database"]
 publish = ["crates-io"]
 
 [dependencies]
-qraft = { path = "..", version = "0.3.2", feature = ["sqlite", "postgres", "mysql"] }
+eyre = "0.6.12"
+qraft = { path = "..", version = "0.3.2", features = ["sqlite", "postgres", "mysql"] }
+secrecy = "0.10.3"
+serde = { version = "1.0.219", features = ["derive"] }
+serde-value = "0.7.0"
+serde_json = "1.0.140"
 smol_str = "0.3.2"
+sqlx = { version = "0.8.6", features = ["postgres"] }
+tokio = { version = "1.45.1", features = ["full"] }
